home content fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,7 @@
     }
     
     #contactus-footer {
+        width: 100%;
         background-color: #2E6613;
         padding: 20px;
     }
@@ -708,6 +709,7 @@
     }
     
     .journey-footer {
+        width: 100%;
         background-color: #2E6613;
         padding: 20px;
     }
@@ -1399,6 +1401,7 @@
             font-size: 10px;
         }
         .destinationplan {
+            margin: 0 auto;
             margin-bottom: 70px;
         }
     }
@@ -1415,7 +1418,7 @@
             margin-top: 30px;
         }
         .destination-plan {
-            /* margin: 0 auto; */
+            margin: 0 auto;
             width: 300px;
             font-size: 13px;
         }
@@ -1477,11 +1480,8 @@
     
     @media(max-width:400px) {
         .destination-plan {
-            width: 300px;
-            font-size: 15px;
-        }
-        .home-content {
-            background-size: contain;
+            width: 250px;
+            font-size: 10px;
         }
         .services-box {
             height: 520px;
@@ -1507,6 +1507,12 @@
         }
         .services .heading {
             font-size: 30px;
+        }
+        .heading-journey {
+            text-align: left;
+        }
+        #activities {
+            justify-content: center;
         }
     }
     
@@ -1575,6 +1581,13 @@
         .services-box {
             height: 450px;
         }
+        .home-content .welcome {
+            font-size: 30px;
+        }
+        .destination-plan {
+            width: 200px;
+            font-size: 9px;
+        }
     }
     
     @media(max-width:350px) {
@@ -1635,14 +1648,14 @@
             width: 200px;
             font-size: 9px;
         }
-    }
-    
-    @media(max-width:338px) {
-        .home-content {
+        .footer-box {
             width: 100%;
         }
-        .services-box {
-            height: auto
+    }
+    
+    @media(max-width:328px) {
+        .home-content .welcome {
+            font-size: 25px;
         }
     }
     
@@ -1668,6 +1681,9 @@
         }
         .home-content {
             width: 100%;
+        }
+        .home-content .welcome {
+            font-size: 20px;
         }
         .destination-plan {
             width: 200px;
@@ -1699,8 +1715,9 @@
             width: 100%;
         }
         .destination-plan {
-            width: 230px;
-            font-size: 10px;
+            margin: 0 auto;
+            width: 200px;
+            font-size: 9px;
         }
         .footer-box span {
             font-size: 12px;
@@ -1709,11 +1726,17 @@
     
     @media(max-width:250px) {
         .destination-plan {
-            width: 210px;
-            font-size: 10px;
+            width: 190px;
+            font-size: 9px;
         }
         .services-box {
             height: 200px;
+        }
+        .home-content .welcome {
+            font-size: 20px;
+        }
+        .services-box {
+            width: 100%;
         }
     }
     
@@ -1749,6 +1772,15 @@
     @media(max-width:200px) {
         .home-content {
             width: 100%;
+        }
+        .home-content .welcome {
+            font-size: 15px;
+        }
+        .starter-heading {
+            font: 10px;
+        }
+        .adventure-btn1 {
+            width: 180px;
         }
         .logo-heading {
             font-size: 10px;
@@ -1798,15 +1830,15 @@
         .starter-content h1 {
             line-height: 10rem;
         }
-        .adventure-btn1 {
-            font-size: 5px;
-            display: inline-block;
-        }
         .services-box {
             height: 330px;
         }
         .services-box {
             width: 100%;
+            padding: 10px;
+        }
+        .services-box {
+            height: 400px;
             padding: 10px;
         }
         .logo-heading {
@@ -1818,6 +1850,9 @@
         }
         .footer-box span {
             font-size: 8px;
+        }
+        .destination-plan {
+            margin: 0 auto;
         }
     }
     
